--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   carousel_slider: ^5.1.1
   shared_preferences: ^2.5.3
   introduction_screen: ^3.1.17
+  http: ^1.5.0
+  audioplayers: ^6.5.1
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
