--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http: ^1.5.0
   audioplayers: ^6.5.1
   provider: ^6.1.5+1
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
