--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   audioplayers: ^6.5.1
   provider: ^6.1.5+1
   auto_size_text: ^3.0.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
