--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   provider: ^6.1.5+1
   auto_size_text: ^3.0.0
   intl: ^0.20.2
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
